# hexlet-django-blog

./: .gitignore  Makefile  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py  0002_articlecomment_alter_article_name.py
hexlet_django_blog/article/templates/articles/: comment.html  create.html  index.html  show.html  update.html
hexlet_django_blog/templates/: base.html  index.html
